chore: built `feat: updated drafts, added freelance draft section, updated layouts`

--- a/freelance/index.html
+++ b/freelance/index.html
@@ -9,13 +9,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Applis mobiles Android &amp; iOS, Applications web Ruby on Rails" />
 <meta property="og:description" content="Applis mobiles Android &amp; iOS, Applications web Ruby on Rails" />
-<link rel="canonical" href="https://elaoin.com/cases/" />
-<meta property="og:url" content="https://elaoin.com/cases/" />
+<link rel="canonical" href="https://elaoin.com/freelance/" />
+<meta property="og:url" content="https://elaoin.com/freelance/" />
 <meta property="og:site_name" content="Elaoin" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Elaoin" />
 <script type="application/ld+json">
-{"headline":"Elaoin","url":"https://elaoin.com/cases/","@type":"WebPage","description":"Applis mobiles Android &amp; iOS, Applications web Ruby on Rails","@context":"https://schema.org"}</script>
+{"headline":"Elaoin","url":"https://elaoin.com/freelance/","@type":"WebPage","description":"Applis mobiles Android &amp; iOS, Applications web Ruby on Rails","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://elaoin.com/feed.xml" title="Elaoin" /></head>
 <body><header class="site-header" role="banner">
@@ -35,7 +35,7 @@
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home">
+        <div class="home"><p>This is a portfolio of our work as a freelancer, we develop full Web Applications in Ruby-On-Rails, and we are proficient in Mobile Application Development both Native iOS and Android and hybrid with various frameworks such as flutter and react-native, we also have experience with gaming frameworks such as Unity and Unreal.</p>
 
 
   </div>
