--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="About" />
 <script type="application/ld+json">
-{"url":"https://elaoin.com/about/","headline":"About","@type":"WebSite","description":"Applis mobiles Android &amp; iOS, Applications web Ruby on Rails","name":"Elaoin","@context":"https://schema.org"}</script>
+{"headline":"About","url":"https://elaoin.com/about/","@type":"WebSite","description":"Applis mobiles Android &amp; iOS, Applications web Ruby on Rails","name":"Elaoin","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://elaoin.com/feed.xml" title="Elaoin" /></head>
 <body><header class="site-header" role="banner">
