--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Elaoin" />
 <script type="application/ld+json">
-{"url":"https://elaoin.com/","headline":"Elaoin","@type":"WebSite","description":"Applis mobiles Android &amp; iOS, Applications web Ruby on Rails","name":"Elaoin","@context":"https://schema.org"}</script>
+{"headline":"Elaoin","url":"https://elaoin.com/","@type":"WebSite","description":"Applis mobiles Android &amp; iOS, Applications web Ruby on Rails","name":"Elaoin","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://elaoin.com/feed.xml" title="Elaoin" /></head>
 <body><header class="site-header" role="banner">
@@ -33,7 +33,9 @@
         <div class="trigger"><a class="page-link" href="/about/">About</a><a class="page-link" href="/blog/">Blog</a></div>
       </nav></div>
 </header>
+<main>
 
+        
 
 
     <style type="text/css" media="screen">
@@ -145,7 +147,10 @@
       
 
       </div>
-    </section><footer class="site-footer h-card">
+    </section>
+
+
+    </main><footer class="site-footer h-card">
   <data class="u-url" href="/"></data>
 
   <div class="wrapper">
