chore: built `feat: published freelance section with 4 projects`

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         background-size: cover;
       }
       .start-page .switch .switch-link.software {
-        width: 50.0%;
+        width: 33.333333333333336%;
       }
       </style>
 
@@ -127,13 +127,33 @@
       
 
       <style type="text/css" media="screen">
+      .start-page .switch .switch-link.freelance .bg {
+        background: url(../assets/freelance.png) 50% 50% no-repeat;
+        -webkit-background-size: cover;
+        background-size: cover;
+      }
+      .start-page .switch .switch-link.freelance {
+        width: 33.333333333333336%;
+      }
+      </style>
+
+      <a class="switch-link freelance" href="/freelance">
+        <div class="bg"></div>
+        <span class="title">
+          freelance
+        </span>
+      </a>
+
+      
+
+      <style type="text/css" media="screen">
       .start-page .switch .switch-link.synth .bg {
         background: url(../assets/synth.png) 50% 50% no-repeat;
         -webkit-background-size: cover;
         background-size: cover;
       }
       .start-page .switch .switch-link.synth {
-        width: 50.0%;
+        width: 33.333333333333336%;
       }
       </style>
 
